--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,6 +61,9 @@
       src: url('/tipografias/Cheltenham Bold Italic Headline BT.ttf');
     }
 
+    #chart_1{
+      overflow-y:auto;
+    }
 
     #chart_1 svg, #chart_2 svg, #chart_3 svg {
       max-width: initial;
@@ -69,4 +72,5 @@
       margin-top: 3em;
       margin-bottom: 3em;
   }
+
      
