--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,9 @@
 
-      .box {        
+    .box {        
           border: 1px solid rgba(238, 238, 238, 0.932);    
           background-color: rgba(238, 238, 238, 0.932);
-      }      
-      .outer{
-        /*list-style-type: none;*/
+    }      
+    .outer{
         text-align: center;
         margin: 0;
         padding: 0;
@@ -17,12 +16,16 @@
         padding: 10px;
         text-align: center;    
         border: 1px solid rgb(198, 198, 198);
-        background-color: rgba(221, 221, 221, 0.932);
+        background-color: rgba(231, 229, 229, 0.932);
         font-family: font_imperial;
-        font-size: 17px;
+        font-size: 16px;
         color: rgb(0, 0, 0);
         text-align: center;
     }   
+    .boton:hover{
+        background-color: rgb(221, 220, 220);
+    }
+    
 
 
       p#clima {
@@ -46,7 +49,7 @@
         font-size: 60px;
         color: rgb(0, 0, 0);
         margin: 10px;
-        margin-top: -10px;
+        margin-top: -20px;
         
       }
       p#titulo {
@@ -55,6 +58,16 @@
         font-size: 45px;
         color: rgb(0, 0, 0);
         text-align: center;
+      }
+
+      p#leyenda {
+        text-align: center;
+        font-family: font_imperial;
+        font-size: 15px;
+        color: rgb(0, 0, 0);
+        margin-top: 30px;
+        margin-bottom: -40px;
+
       }
 
       .subtitulo {
@@ -67,9 +80,34 @@
 
       .cuerpo {
         font-family: font_imperial;
-        font-size: 20px;
-        color: rgb(0, 0, 0);
+        font-size: 16px;
+        color: rgb(111, 111, 111);
         text-align: center;
+        margin-top: 30px;
+        margin-left: 20%;
+        margin-right: 20%;
+        line-height: 23px; 
+      }
+      
+      .cuerpo_negrita {
+        font-family: font_imperial;
+        font-size: 16px;
+        color: rgb(111, 111, 111);
+        text-align: center;
+        
+        line-height: 23px; 
+        font-weight: bold;
+      }
+
+      .pregunta {
+        font-family: font_italic;
+        font-size: 22px;
+        color: rgb(111, 111, 111);
+        text-align: center;
+        margin-top: 30px;
+        margin-left: 20%;
+        margin-right: 20%;
+        line-height: 23px; 
       }
 
       #cuerpo_final {
