--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,10 +83,10 @@
         font-size: 16px;
         color: rgb(111, 111, 111);
         text-align: center;
-        margin-top: 30px;
-        margin-left: 20%;
-        margin-right: 20%;
         line-height: 23px; 
+        max-width: 750px;
+        margin:auto;
+        margin-top: 30px;
       }
       
       .cuerpo_negrita {
