--- a/styles/styles.css
+++ b/styles/styles.css
@@ -118,7 +118,7 @@
         font-family: font_imperial;
         font-size: 16px;
         color: rgb(111, 111, 111);
-        text-align: center;
+        text-align: left;
         line-height: 23px; 
         max-width: 750px;
         margin:auto;
