--- a/styles/reset.css
+++ b/styles/reset.css
@@ -1,9 +1,5 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, blockquote, pre,
+html, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
