--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,17 +38,17 @@
         flex:2;
         display: inline-block;
         width: 20%;
-        padding: 10px;
+        padding: 0px;
         text-align: center;    
         border: 1px solid rgb(255, 255, 255);
-        background-color: rgba(174, 207, 235, 0.648);
+        background-color: rgba(174, 207, 235, 0.546);
         font-family: font_imperial;
         font-size: 16px;
         color: rgb(0, 0, 0);
         text-align: center;
     }   
     .boton:hover{
-        background-color: rgba(139, 185, 214, 0.562);
+        background-color: rgba(174, 207, 235, 0.642);
     }
   
     p#clima {
@@ -83,7 +83,8 @@
         margin-top: 5px;
       }
       p#titulo {
-        margin-top: 60px;
+        margin-top: 70px;
+        margin-bottom: 0px;
         font-family: font_bold_italic;
         font-size: 45px;
         color: rgb(0, 0, 0);
@@ -95,7 +96,7 @@
         font-family: font_imperial;
         font-size: 15px;
         color: rgb(0, 0, 0);
-        margin-top: 30px;
+        margin-top: 20px;
         margin-bottom: -40px;
 
       }
@@ -106,6 +107,7 @@
         color: rgb(0, 0, 0);
         text-align: center;
         margin-top: 10px;
+        margin-bottom: 0px;
       }
 
       .cuerpo {
@@ -116,7 +118,7 @@
         line-height: 23px; 
         max-width: 750px;
         margin:auto;
-        margin-top: 30px;
+        margin-top: 40px;
       }
       
       .cuerpo_negrita {
@@ -155,7 +157,7 @@
         font-size: 16px;
         color: rgb(111, 111, 111);
         text-align: center;
-        padding: 10px;
+        padding: 5px;
       }
 
 
